
{{ $NEXT }}

    [Changed]

    - The worker is now able to run tasks from all containers by
      default. This opens up Minion queues to be used for other
      purposes, such as prioritization and partitioning jobs.

    - BREAKING CHANGE: The `Beam::Minion::enqueue` method now accepts an
      arrayref of args and a hashref of options. Previously, the
      arguments were allowed as a list, but this prevented us from
      adding the options hashref.

    [Added]

    - Added options to the `beam minion run` command to set job
      auto-retry, job delay, and job priority.

0.006     2017-08-22 18:48:33-05:00 America/Chicago

    [Fixed]

    - Fixed issue with passing plain DBI DSNs: The backend expects
      a list of arguments, not an arrayref of arguments.

    - Moved log to STDERR. This is temporary until we can come up with
      some more robust logging configuration (probably Log::Any)

0.005     2017-08-19 21:42:31-05:00 America/Chicago

    [Fixed]

    - Fixed raw Minion args to allow passing plain DBI DSNs. This allows
      me to use the `mysql_read_defaults_file` DBD::mysql configuration.

0.004     2017-08-14 13:01:07-05:00 America/Chicago

    [Added]

    - Added `enqueue` Perl API to the Beam::Minion module. This makes it
      easier to add jobs via Perl instead of using the command-line (or
      the command class)

    [Fixed]

    - Fixed deprecated use of `slurp` from Mojolicious
    - Fixed some error messages to be easier to understand for the user

0.003     2017-04-28 01:26:54-05:00 America/Chicago

    [Fixed]

    - Missing BEAM_MINION environment variable now shows a more friendly
      error message

    [Added]

    - Added some basic getting started documentation in preparation for
      writing some tutorials

0.002     2017-01-15 14:15:44-06:00 America/Chicago

    [Fixed]

    - Updated prereq versions to have all the features we need

0.001     2017-01-13 20:01:57-06:00 America/Chicago

    - Initial release